2005-05-23  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/sort.cc (mx_sort, mx_sort_indexed): Return
	appropriately sized empty values for empty args.

	* debug.cc (Fdbwhere, get_user_function): Look at
	curr_caller_function, not curr_function, since function is now set
	inside mapper, built-in (and therefore dld) functions too.

2005-05-21  John W. Eaton  <jwe@octave.org>

	* pr-output.cc, pr-output.h (Vprint_empty_dimensions): Now extern.
	* ov-cell.cc (octave_cell::print_raw): Conditionally print
	dimensions of empty 2-d cell arrays.

	* DLD-FUNCTIONS/sort.cc (mx_sort, mx_sort_indexed): Return empty
	values for empty args.

	* lex.l (handle_string): If single-quote string, \ and . have no
	special meaning.

2005-05-18  John W. Eaton  <jwe@octave.org>

	* pt-colon.cc (tree_colon_expression::make_range): Don't require
	scalars values as range components.

	* version.h (OCTAVE_VERSION): Now 2.9.3
	(OCTAVE_API_VERSION): Now api-v16.

	* ov-base-sparse.cc (octave_base_sparse<T>::print_raw):
	Make spacing of output consistent with other parts of Octave.

	* DLD-FUNCTIONS/rand.cc (do_rand): Chop trailing singelton
	dimensions before generating array.

2005-05-17  John W. Eaton  <jwe@octave.org>

	* ov.cc (install_types): Don't call octave_stream::register_type.
	* ov.h, ov.cc (octave_value::octave_value (const octave_stream&,
	int): Delete constructor.
	(octave_value::is_stream, octave_value::stream_value,
	octave_value::stream_number): Delete functions.
	* ov-base.h (octave_base_value::is_stream): Delete function.
	* ov-base.h, ov-base.cc (octave_base_value::stream_value,
	octave_base_value::stream_number): Delete functions.
	* file-io.cc (Fisstream): Delete function.
	* op-file.h, op-file.cc, OPERATORS/op-fil-sbm.cc,
	OPERATORS/op-fil-scm.cc, OPERATORS/op-fil-sm.cc,
	* OPERATORS/op-fil-b.cc, OPERATORS/op-fil-bm.cc,
	OPERATORS/op-fil-cm.cc, OPERATORS/op-fil-cs.cc,
	OPERATORS/op-fil-m.cc, OPERATORS/op-fil-s.cc,
	OPERATORS/op-fil-lis.cc, OPERATORS/op-fil-rec.cc,